GTP week 5 homework

--- a/2023/GTP/homework-04/homework.tex
+++ b/2023/GTP/homework-04/homework.tex
@@ -100,16 +100,16 @@
 \begin{claim}
   The topological space $\mathbb P^2_{\R}$ is not homeomorphic to $\mathbb P^1_{\R}$.
   \begin{proof}
-    We being by establishing that there is an open subset of $\mathbb P^2_{\R}$ that is
+    We begin by establishing that there is an open subset of $\mathbb P^2_{\R}$ that is
     homeomorphic to $\R^2$. One such subset is
     \begin{align*}
-      S=\cc{[x,y,z] : x,y,z\in\R, y\neq 0, z\neq 0},
+      S=\cc{[x,y,z] : x,y,z\in\R, z>0},
     \end{align*}
     i.e. all lines in $\R^3$ that are not in the $xy$ or $xz$-planes. A corresponding
     homeomorphism is
     \begin{align*}
       f:S &\to \R^2 \\
-      \bb{x,y,z} &\mapsto \rr{x/y,x/z}.
+      \bb{x,y,z} &\mapsto \rr{x/z, y/z}.
     \end{align*}
 
     Secondly, we establish that there is no such open subset of $\mathbb P^1_{\R}$ that
