--- a/2023/GTP/homework-06/homework.tex
+++ b/2023/GTP/homework-06/homework.tex
@@ -9,10 +9,10 @@
 
 \section*{Exercise 1}
 
-For each $n\in\N$, consider the finite cyclic group $\Z/n\Z=\cc{0,\ldots,n-1}$ with
+For each $n\in\N$, consider the finite cyclic group $\Z_n=\Z/n\Z=\cc{0,\ldots,n-1}$ with
 its discrete topology. Consider the topological space
 \begin{align*}
-  X=\prod_{n\in\N} \Z/n\Z.
+  X=\prod_{n\in\N} \Z_n.
 \end{align*}
 Define the subset
 \begin{align*}
@@ -22,23 +22,23 @@ We note that, for each $n\in\N$, the choice of $a_n$ is only restricted by choic
 $a_1,\ldots,a_{n-1}$. Thus we may consider the set of choices that remain at each step.
 Let $a=\rr{a_n}_{n\in\N}\in\hat\Z$ and $N\in\N$. Define the set
 \begin{align*}
-  C_N\rr{a} = \cc{x \in \Z/N\Z : \forall m<N. \: \text{if $m|n$ then }a_m\equiv x \mod m }\subseteq \Z/N\Z.
+  C_N\rr{a} = \cc{x \in \Z_N : \forall m<N. \: \text{if $m|n$ then }a_m\equiv x \mod m }\subseteq \Z_N.
 \end{align*}
 In order to show that $\hat\Z$ is open we may show that its complement is closed. We thus define the
 set of sequences that have the same prefix as $a\in\hat\Z$ but violate the condition above
 at some $N\in\N$:
 \begin{align*}
-  D_N\rr{a}=\prod_{n=1}^{N-1}\cc{a_n}\times\rr{X\setminus C_N\rr{a}}\times \prod_{n=N+1}^{\infty} \Z/N\Z \subseteq X.
+  D_N\rr{a}=\prod_{n=1}^{N-1}\cc{a_n}\times\rr{\Z_N\setminus C_N\rr{a}}\times \prod_{n=N+1}^{\infty} \Z_n \subseteq X.
 \end{align*}
 This allows us to consider all the sequences that are constructed in such manner:
 \begin{align*}
-  D = \bigcup_{N\in\N}\bigcup_{a\in\hat\Z} Z_N\rr{a} \subseteq X.
+  D = \bigcup_{N\in\N}\bigcup_{a\in\hat\Z} D_N\rr{a} \subseteq X.
 \end{align*}
 
 \begin{claim*}
   $D\subseteq X$ is closed.
   \begin{proof}
-    For all $a\in\hat\Z$ and $N\in\N$, the set $X\setminus C_N\rr{a}\subseteq \Z/N\Z$ is closed with
+    For all $a\in\hat\Z$ and $N\in\N$, the set $X\setminus C_N\rr{a}\subseteq \Z_N$ is closed with
     respect to the discrete topology. Thus the set $D_N\rr{a}\subseteq X$ must be closed
     with respect to the product topology on $X$. Finally, $D$ is a union of closed sets and
     thus closed.
@@ -56,7 +56,7 @@ This allows us to consider all the sequences that are constructed in such manner
     In particular, there exists a sequence $b=\rr{b_n}_{n\in\N}\in\hat\Z$ such that,
     for $n<N$, $a_n=b_n$ and $a_N\in X\setminus C_N\rr{b}$. Thus
     \begin{align*}
-      a\in \prod_{n=1}^{N-1} \cc{b_n} \times \rr{X\setminus C_N\rr{b}} \times \prod_{n=N+1}^\infty \Z/n\Z= D_N\rr{b}\subseteq D
+      a\in \prod_{n=1}^{N-1} \cc{b_n} \times \rr{X\setminus C_N\rr{b}} \times \prod_{n=N+1}^\infty \Z_n= D_N\rr{b}\subseteq D
     \end{align*}
   \end{proof}
 \end{claim*}
@@ -74,16 +74,16 @@ Consider the map
   $i\rr{\Z}$ is dense in $\hat\Z$.
   \begin{proof}
     Consider a non-empty open set $U\subseteq\hat\Z$. For some $N\in\N$ and some collection of
-    of opens $U_1,\ldots,U_N$ with $U_n\subseteq \Z/n\Z$ we may write
+    of opens $U_1,\ldots,U_N$ with $U_n\subseteq \Z_n$ we may write
     \begin{align*}
-      U = \prod_{n=1}^{N}U_n \times \prod_{n=N+1}^\infty \Z/n\Z.
+      U = \prod_{n=1}^{N}U_n \times \prod_{n=N+1}^\infty \Z_n.
     \end{align*}
     Fix some $u=\rr{u_n}_{n\in\N}\in U$. By the Chinese Remainder Theorem there exists a
     solution $b\in\Z$ to the system of $N$ equations of the form
     \begin{align*}
       b \equiv u_n \mod n.
     \end{align*}
-    Clearly, $\rr{i\rr{b}}_{n}\in U_n$ for all $n\leq N$. Further, for $n>N$, $\rr{i\rr{b}}_n\in\Z/n\Z$
+    Clearly, $\rr{i\rr{b}}_{n}\in U_n$ for all $n\leq N$. Further, for $n>N$, $\rr{i\rr{b}}_n\in\Z_n$
     trivially. Thus $i\rr{b}\in U$, i.e. $U\cap i\rr{\Z}\neq\emptyset$. Now $i\rr{\Z}$ intersects
     every non-empty open subset of $\hat\Z$ so it is dense in $\hat\Z$.
   \end{proof}
