--- a/2023/IQC/notes/notes.tex
+++ b/2023/IQC/notes/notes.tex
@@ -1,4 +1,4 @@
- %! TEX program = lualatex
+%! TEX program = lualatex
 \documentclass{article}
 \usepackage{notes-preamble}
 \mkthmstwounified
@@ -15,111 +15,146 @@
 \label{sec:mathetmatical-prerequisites}
 
 \begin{definition}
-	\label{def:hilbert-space}
-	A Hilbert space is a complex inner product space which is complete with respect to the induced metric.
+  \label{def:hilbert-space}
+  A Hilbert space is a complex inner product space which is complete with respect to the induced metric.
 \end{definition}
 
 \begin{definition}
-	\label{def:unitary-matrix}
-	Let $U\in\Mat\rr{n; \C}$. Then define $U^\dagger = \overline{U}^T$. Further, $U$ is unitary iff
-	$U^\dagger U =UU^\dagger = I$.
+  \label{def:unitary-matrix}
+  Let $U\in\Mat\rr{n; \C}$. Then define $U^\dagger = \overline{U}^T$. Further, $U$ is normal iff
+  $U^\dagger U =UU^\dagger$ and unitary iff $U^\dagger U =UU^\dagger = I$.
 \end{definition}
 
+\begin{theorem}[Spectral decomposition]
+  Any normal operator $M$ on a vector space $V$ is diagonal with respect to some orthonormal
+  basis for $V$.
+
+  Conversely, any diagonalisable operator is normal.
+\end{theorem}
+
 \begin{definition}[Tensor product]
-	\label{def:tensor-product}
-	Let $\mathcal H_A, \mathcal H_B$ be Hilbert spaces with bases $\mathcal B_A$ and
-	$\mathcal B_B$, respectively. Then $\mathcal H_A\otimes\mathcal H_B$ is the Hilbert
-	space with basis
-	\begin{align*}
-		B_{A\otimes B} = \cc{a \otimes b : a \in \mathcal B_A, b\in\mathcal B_B}.
-	\end{align*}
+  \label{def:tensor-product}
+  Let $\mathcal H_A, \mathcal H_B$ be Hilbert spaces with bases $\mathcal B_A$ and
+  $\mathcal B_B$, respectively. Then $\mathcal H_A\otimes\mathcal H_B$ is the Hilbert
+  space with basis
+  \begin{align*}
+    B_{A\otimes B} = \cc{a \otimes b : a \in \mathcal B_A, b\in\mathcal B_B}.
+  \end{align*}
 
-	Let
-	\begin{align*}
-		x = \sum_{a\in\mathcal B_A} x_a a\in\mathcal H_A, \hs
-		y = \sum_{b\in\mathcal B_B} y_b b\in\mathcal H_B
-	\end{align*}
-	be vectors. Then define
-	\begin{align*}
-		x \otimes y = \sum_{a\in\mathcal B_A}\sum_{b\in\mathcal B_B} x_a y_b a \otimes b.
-	\end{align*}
+  Let
+  \begin{align*}
+    x = \sum_{a\in\mathcal B_A} x_a a\in\mathcal H_A, \hs
+    y = \sum_{b\in\mathcal B_B} y_b b\in\mathcal H_B
+  \end{align*}
+  be vectors. Then define
+  \begin{align*}
+    x \otimes y = \sum_{a\in\mathcal B_A}\sum_{b\in\mathcal B_B} x_a y_b a \otimes b.
+  \end{align*}
 
-	Let $A\in\mathcal L\rr{\mathcal H_A}$ and $B\in\mathcal L\rr{\mathcal H_B}$ be linear
-	operators. Then $A\otimes B\in\mathcal L\rr{\mathcal H_A\otimes\mathcal H_B}$ is the
-	unique linear operator such that, for all $a\in\mathcal H_A$, $b\in\mathcal H_B$,
-	\begin{align*}
-		\rr{A\otimes B}\rr{a \otimes b} = A a \otimes B b.
-	\end{align*}
-	Explicitly,
-	\begin{align*}
-		A \otimes B = \begin{pmatrix}
-			              A_{11} B & \cdots & A_{1n}B \\
-			              \vdots   & \ddots & \vdots  \\
-			              A_{n1} B & \cdots & A_{nn}B
-		              \end{pmatrix}.
-	\end{align*}
+  Let $A\in\mathcal L\rr{\mathcal H_A}$ and $B\in\mathcal L\rr{\mathcal H_B}$ be linear
+  operators. Then $A\otimes B\in\mathcal L\rr{\mathcal H_A\otimes\mathcal H_B}$ is the
+  unique linear operator such that, for all $a\in\mathcal H_A$, $b\in\mathcal H_B$,
+  \begin{align*}
+    \rr{A\otimes B}\rr{a \otimes b} = A a \otimes B b.
+  \end{align*}
+  Explicitly,
+  \begin{align*}
+    A \otimes B = \begin{pmatrix}
+      A_{11} B & \cdots & A_{1n}B \\
+      \vdots   & \ddots & \vdots  \\
+      A_{n1} B & \cdots & A_{nn}B
+    \end{pmatrix}.
+  \end{align*}
 \end{definition}
 
 \section{Postulates}
 \label{sec:postulates}
 
-\subsection{Quantum States}
+\subsection{State space}
 \label{sec:quantum-states}
 
 \begin{definition}
-	\label{def:quantum-state}
-	Let $\mathcal H$ be a Hilbert space with an finite ordered orthonormal basis
-	$\rr{v^1, ..., v^d}$. A quantum state is a vector $\va{\psi}\in\mathcal H$.
-	We write
-	\begin{align*}
-		\va{\psi} = \sum_{i\in I} \psi_i v^i
-	\end{align*}
-	where $\psi_1,...,\psi_d\in\C$ are the probability amplitudes of the $d$ outcomes.
-	In particular, the probability of the outcome $1\leq i\leq d$, is $P \rr{ i } = \abs{ \psi_i }^2$.
-	For $n$ bits there are $d=2^n$ outcomes.
+  \label{def:quantum-state}
+  Let $\mathcal H$ be a Hilbert space with an finite ordered orthonormal basis
+  $\rr{v^1, ..., v^d}$. A quantum state is a unit vector $\va{\psi}\in\mathcal H$.
+  We write
+  \begin{align*}
+    \va{\psi} = \sum_{i\in I} \psi_i v^i
+  \end{align*}
+  where $\psi_1,...,\psi_d\in\C$ are the probability amplitudes of the $d$ outcomes.
+  In particular, the probability of the outcome $1\leq i\leq d$, is $P \rr{ i } = \abs{ \psi_i }^2$.
+  For $n$ bits there are $d=2^n$ outcomes.
+\end{definition}
+
+\begin{axiom}
+  Associated to any isolated physical system is a Hilbert space $\mathcal H$. The state of the system
+  is completely described by a state vector $\va{\psi}\in\mathcal H$.
+\end{axiom}
+
+\begin{definition}
+  \label{def:qubit}
+  A qubit is a quantum state $ \va{\psi}\in\C^2$. We define
+  \begin{align*}
+    \va{ 0 } = \rr{ 1, 0 }^\top \\
+    \va{ 1 } = \rr{ 0, 1 }^\top
+  \end{align*}
 \end{definition}
 
 \begin{definition}
-	\label{def:qubit}
-	A qubit is a quantum state $ \va{\psi}\in\C^2$. We define
-	\begin{align*}
-		\va{ 0 } = \rr{ 1, 0 }^\top \\
-		\va{ 1 } = \rr{ 0, 1 }^\top
-	\end{align*}
-\end{definition}
-
-\begin{definition}
-	\label{def:superposition}
-	\begin{align*}
-		\va{ + } = \frac{1}{\sqrt{2}} \rr{ \va{ 0 } + \va{ 1 } } \\
-		\va{ - } = \frac{1}{\sqrt{2}} \rr{ \va{ 0 } - \va{ 1 } }
-	\end{align*}
+  \label{def:superposition}
+  \begin{align*}
+    \va{ + } = \frac{1}{\sqrt{2}} \rr{ \va{ 0 } + \va{ 1 } } \\
+    \va{ - } = \frac{1}{\sqrt{2}} \rr{ \va{ 0 } - \va{ 1 } }
+  \end{align*}
 \end{definition}
 
 \subsection{Quantum operations}
 \label{sec:quantum-operations}
 
-\begin{definition}
-	\label{def:quantum-operation}
-	An operation on a quantum state $ \va{ \psi } \in \mathcal H = \C^d$ is given by
-	a unitary transformation $U:\mathcal H \to \mathcal H$, i.e.
-	\begin{align*}
-		UU^\dagger = U^\dagger U = I_d.
-	\end{align*}
-\end{definition}
+\begin{axiom}
+  \label{def:quantum-operation}
+  The evolution of a closed quantum system with associated Hilbert space $\mathcal H$
+  is described by a unitary transformation $U:\mathcal H\to\mathcal H$.
+
+  That is, the state $\va{\psi}$ of the system at time $t_1$ is related to the state
+  $\va{\psi'}$ of the system at time $t_2$ by a unitary operator $U$ which depends only
+  on the times $t_1$ and $t_2$,
+  \begin{align*}
+    \va{\psi'}=U\va{\psi}.
+  \end{align*}
+\end{axiom}
 
 \subsection{Measurement}
 \label{sec:measurement}
 
-\begin{definition}
-	\label{def:probability-of-outcome}
-	Let $\cc{\va{v_i}}$ be a basis of a Hilbert space $\mathcal{H}$ and an associated measurement $\psi$.
-	Then the probability of outcome $i$ is
-	\begin{align*}
-		P\rr{i} = \abs{\ava{v_i}{\psi}}^2.
-	\end{align*}
-	The quantum state is updated to $\va{v_i}$.
-\end{definition}
+\begin{axiom}
+  Quantum measurements are described by a collection $\cc{M_m}$ of measurement operators.
+  There are operators acting on the state space of the system being measured. The index $m$
+  refers to the measurement outcomes that may occur in the experiment. If the state of the
+  quantum system is $\va{\psi}$ immediately before the measurement then the probability
+  that result $m$ occurs is given by
+  \begin{align*}
+    \pr{m}=\av{\psi}M_m^\dagger M_m \va{\psi},
+  \end{align*}
+  and the state of the system after the measurement is
+  \begin{align*}
+    \frac{M_m \va{\psi}}{\sqrt{\av{\psi}M_m^\dagger M_m \va{\psi}}}.
+  \end{align*}
+  The measurement operators satisfy the completeness equation,
+  \begin{align*}
+    \sum_{m} M_m^\dagger M_m = I.
+  \end{align*}
+\end{axiom}
+
+\begin{theorem}
+  \label{thm:probability-of-outcome}
+  Let $\cc{\va{v_i}}$ be a basis of a Hilbert space $\mathcal{H}$ and an associated measurement $\psi$.
+  Then the probability of outcome $i$ is
+  \begin{align*}
+    P\rr{i} = \abs{\ava{v_i}{\psi}}^2.
+  \end{align*}
+  The quantum state is updated to $\va{v_i}$.
+\end{theorem}
 
 \section{Quantum circuits}
 \label{sec:circuits}
@@ -128,83 +163,133 @@
 \label{sec:gates}
 
 \begin{definition}
-	\label{def:single-qubit-gates}
-	An $n$ qubit gate is a unitary matrix $U\in\Mat\rr{2^n;\C}$.
+  \label{def:single-qubit-gates}
+  An $n$ qubit gate is a unitary matrix $U\in\Mat\rr{2^n;\C}$.
 \end{definition}
 
 \begin{corollary}
-	Every quantum gate is invertible.
+  Every quantum gate is invertible.
 \end{corollary}
 
 \subsubsection{Single qubit gates}
 \label{sec:single-qubit-gates}
 
 \begin{definition}
-	\label{def:identity}
-	The identity gate $I$ is the matrix
-	\begin{align*}
-		I = \begin{pmatrix}
-			    1 & 0 \\ 0 & 1
-		    \end{pmatrix}.
-	\end{align*}
+  \label{def:identity}
+  The identity gate $I$ is the matrix
+  \begin{align*}
+    I = \begin{pmatrix}
+      1 & 0 \\ 0 & 1
+    \end{pmatrix}.
+  \end{align*}
 \end{definition}
 
 \begin{definition}
-	\label{def:not}
-	The not gate $X$ is given by
-	\begin{align*}
-		X = \begin{pmatrix}
-			    0 & 1 \\ 1 & 0
-		    \end{pmatrix}
-	\end{align*}
+  \label{def:not}
+  The not gate $X$ is given by
+  \begin{align*}
+    X = \begin{pmatrix}
+      0 & 1 \\ 1 & 0
+    \end{pmatrix}
+  \end{align*}
 \end{definition}
 
 \begin{definition}
-	\label{def:phase-flip}
-	The phase flip gate $Z$ is given by
-	\begin{align*}
-		Z = \begin{pmatrix} 1 & 0 \\ 0 & -1 \end{pmatrix}.
-	\end{align*}
-	It transforms as follows:
-	\begin{align*}
-		Z \rr{\alpha\va{0} + \beta\va{1}} = \alpha\va{0} - \beta\va{1}.
-	\end{align*}
+  \label{def:phase-flip}
+  The phase flip gate $Z$ is given by
+  \begin{align*}
+    Z = \begin{pmatrix} 1 & 0 \\ 0 & -1 \end{pmatrix}.
+  \end{align*}
+  It transforms as follows:
+  \begin{align*}
+    Z \rr{\alpha\va{0} + \beta\va{1}} = \alpha\va{0} - \beta\va{1}.
+  \end{align*}
 \end{definition}
 
 
 \begin{definition}
-	\label{def:hadamard}
-	The Hadamard gate $H$ is given by
-	\begin{align*}
-		H = \frac{1}{\sqrt{2}} \begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}.
-	\end{align*}
-	It acts as a change of basis from $ \cc{ \va{ 0 }, \va{ 1 } } $ to $ \cc{ \va{ + }, \va{ - } }$.
+  \label{def:hadamard}
+  The Hadamard gate $H$ is given by
+  \begin{align*}
+    H = \frac{1}{\sqrt{2}} \begin{pmatrix} 1 & 1 \\ 1 & -1 \end{pmatrix}.
+  \end{align*}
+  It acts as a change of basis from $ \cc{ \va{ 0 }, \va{ 1 } } $ to $ \cc{ \va{ + }, \va{ - } }$.
 \end{definition}
 
 \begin{theorem}
-	\label{thm:infinite-gates}
-	There are infinitely many single-qubit quantum gates.
+  \label{thm:infinite-gates}
+  There are infinitely many single-qubit quantum gates.
 \end{theorem}
 
 \subsubsection{Multiple qubit gates}
 \label{sec:multiple-qubit-gates}
 
 \begin{definition}
-	\label{def:cnot}
-	The \text{CNOT} gate $U_{CN}$ is a two qubit quantum gate defined by
-	\begin{align*}
-		U_{CN} = \begin{pmatrix}
-			         1 & 0 & 0 & 0 \\
-			         0 & 1 & 0 & 0 \\
-			         0 & 0 & 0 & 1 \\
-			         0 & 0 & 1 & 0
-		         \end{pmatrix}
-	\end{align*}
+  \label{def:cnot}
+  The \text{CNOT} gate $U_{CN}$ is a two qubit quantum gate defined by
+  \begin{align*}
+    U_{CN} = \begin{pmatrix}
+      1 & 0 & 0 & 0 \\
+      0 & 1 & 0 & 0 \\
+      0 & 0 & 0 & 1 \\
+      0 & 0 & 1 & 0
+    \end{pmatrix}
+  \end{align*}
 \end{definition}
 
 \begin{definition}
-	\label{def:controlled-u}
-	Let $U$ be a quantum gate. Then the controlled-$U$ gate
+  \label{def:controlled-u}
+  Let $U=\rr{u_{ij}}$ be a single qubit quantum gate. Then the controlled-$U$ gate is a two qubit
+  quantum gate defined by
+  \begin{align*}
+    U_C = \begin{pmatrix}
+      1 & 0 & 0 & 0 \\
+      0 & 1 & 0 & 0 \\
+      0 & 0 & u_{00} & u_{01} \\
+      0 & 0 & u_{10} & u_{11}
+    \end{pmatrix}
+  \end{align*}
 \end{definition}
+
+\begin{definition}
+  Let $n\in\N$. Then the Walsh-Hadamard transform is given by the unitary
+  \begin{align*}
+    H^{\otimes n} = H\otimes \cdots \otimes H
+  \end{align*}
+  and, for all $\va{x}\in\cc{0,1}^n$,
+  \begin{align*}
+    H^{\otimes n} \va{x} = \frac{1}{\sqrt{2^n}} \sum_{y\in\cc{0,1}^n} \rr{-1}^{x\cdot y}\va{y}.
+  \end{align*}
+\end{definition}
+
+\begin{definition}
+  Let $f:\cc{0,1}^n\to \cc{0,1}$ be a function. Then the phase-kickback unitary
+  $U_f$ is such that, for all $x\in\cc{0,1}^n$,
+  \begin{align*}
+    U_f \va{x}= \rr{-1}^{f\rr{x}}\va{x}.
+  \end{align*}
+\end{definition}
+
+\section{Algorithms}
+
+\begin{algorithm}[Deutsch-Jozsa]\label{alg:deutsch-jozsa}
+  Given a function $f:\cc{0,1}^n\to\cc{0,1}$ that is either constant or balanced,
+  we decide with certainty which is the casae.
+
+  The circuit is given by
+  \begin{align}
+    \label{eq:deutsch-jozsa}
+    H^{\otimes n} U_f H^{\otimes n}
+  \end{align}
+  and on input $\va{0}^{\otimes n}$ the output is $0^n$ iff $f$ is constant.
+\end{algorithm}
+
+\begin{algorithm}[Bernstein-Vazirani]\label{alg:bernstein-vazirani}
+  Given a function $f:\cc{0,1}^n\to\cc{0,1}$ that is given by $x\mapsto a\cdot x$ for some
+  $a\in\cc{0,1}^n$ we find $a$ with certainty. The circuit is identical to the one in
+  (\ref{eq:deutsch-jozsa}).
+
+  On input $\va{0}^{\otimes n}$ the output is $a$.
+\end{algorithm}
 
 \end{document}
