--- a/2023/IQC/notes/notes.tex
+++ b/2023/IQC/notes/notes.tex
@@ -156,10 +156,7 @@
   The quantum state is updated to $\va{v_i}$.
 \end{theorem}
 
-\section{Quantum circuits}
-\label{sec:circuits}
-
-\subsection{Gates}
+\section{Gates}
 \label{sec:gates}
 
 \begin{definition}
@@ -171,7 +168,7 @@
   Every quantum gate is invertible.
 \end{corollary}
 
-\subsubsection{Single qubit gates}
+\subsection{Single qubit gates}
 \label{sec:single-qubit-gates}
 
 \begin{definition}
@@ -221,7 +218,7 @@
   There are infinitely many single-qubit quantum gates.
 \end{theorem}
 
-\subsubsection{Multiple qubit gates}
+\subsection{Multiple qubit gates}
 \label{sec:multiple-qubit-gates}
 
 \begin{definition}
