RA start on cw2

--- a/2023/RA/notes/notes.tex
+++ b/2023/RA/notes/notes.tex
@@ -333,6 +333,15 @@
   \end{align*}
 \end{theorem}
 
+\subsection{Markov chains}
+
+\begin{definition}
+  A discrete time stochastic process $X_0,X_1,X_2,...$ is a Markov chain when
+  \begin{align*}
+    \prc{X_t=a_t}{X_{t-1}=a_{t-1},X_{t-2}=a_{t-2},\ldots,X_0=a_0}.
+  \end{align*}
+\end{definition}
+
 \section{Algorithms}
 \label{sec:algorithms}
 
