--- a/2023/GTP/homework-08/homework.tex
+++ b/2023/GTP/homework-08/homework.tex
@@ -11,7 +11,7 @@
   The topological space $\cc{0,1}^\omega$ where $\cc{0,1}$ is endowed with the discrete
   topology is compact and Hausdorff.
   \begin{proof}
-    Compact due to Tikhonov. Hausdorff because any two distinct elements differ in at 
+    Compact due to Tikhonov. Hausdorff because any two distinct elements differ in at
     least one place which we may separate locally which is sufficient to make
     sets in the product disjoint.
   \end{proof}
@@ -29,6 +29,15 @@
   $(\N, \leq)$ with the Alexandrov topology is compact but not Hausdorff.
   \begin{proof}
     Both follow because the only open set containing $1\in\N$ is $\N$.
+  \end{proof}
+\end{claim*}
+
+\begin{claim*}
+  $(-\N, \leq)$ with the Alexandrov topology is neither compact nor Hausdorff.
+  \begin{proof}
+    Not compact because every finite set of opens has a minimum element whose predecessor
+    is not covered. Not Hausdorff because any open containing the lesser of two distinct
+    points also contains the greater one.
   \end{proof}
 \end{claim*}
 
